fix z-index

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -299,6 +299,7 @@ h3 {
 		overflow:hidden;
 		padding:0;
 		margin:0;
+		z-index:-6;
 }
 /*bubbles*/
 	
